kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: textin-financial-statement
    app.kubernetes.io/instance: textin-financial-statement
  name: textin-financial-statement
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: textin-financial-statement
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: textin-financial-statement
    spec:
      containers:
        - env:
            - name: GIN_MODE
              value: release
            - name: APP_AUTH_AUTH_TYPE
              value: default
            - name: APP_SERVER_IS_SAAS
              value: 'true'
            - name: APP_LOCAL_STORAGE_SAVE_DIR
              value: /usr/local/fr-files/
            - name: APP_OCR_RECOGNIZE_TABLE_API
              value: >-
                http://financial-statement-report-ner:30080/ai/service/v2/recognize/table
            - name: APP_MYSQL_DATABASE
              value: db_financial_statement_v4
            - name: APP_MYSQL_HOST
              value: 10.2.16.54
            - name: APP_MYSQL_PORT
              value: '3306'
            - name: APP_MYSQL_USERNAME
              value: textin_robot_2022
            - name: APP_MYSQL_PASSWORD
              value: NDtXWe_FDsZBRb3L
            - name: APP_REDIS_HOST
              value: 10.2.16.77
            - name: APP_REDIS_PORT
              value: '6379'
            - name: APP_REDIS_PASSWORD
              value: h70fS6Bt_nwLqxo9
          image: >-
            registry.intsig.net/textin_global/financial_statement:v2.202211121901.92cb78dd
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          name: textin-financial-statement
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 5
              memory: 8096Mi
            requests:
              cpu: 2
              memory: 2048Mi
          volumeMounts:
            - mountPath: /etc/localtime
              name: localtime
            - mountPath: /usr/local/fr-files
              name: fr-files
      hostAliases:
        - hostnames:
            - financial-statement-report-ner
          ip: 10.2.10.63
      imagePullSecrets:
        - name: harbor-hawkeye
      volumes:
        - hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
          name: localtime
        - name: fr-files
          persistentVolumeClaim:
            claimName: nfs-textin-financial-statement

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: textin-financial-statement
  name: textin-financial-statement
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: textin-financial-statement
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  labels:
    app.kubernetes.io/instance: textin-financial-statement
  name: textin-financial-statement
  namespace: default
spec:
  rules:
    - host: textin-financial-statement
      http:
        paths:
          - backend:
              service:
                name: textin-financial-statement
                port:
                  number: 8080
            pathType: ImplementationSpecific

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fr-web
    app.kubernetes.io/instance: textin-financial-statement
  name: fr-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fr-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fr-web
    spec:
      containers:
        - env:
            - name: VUE_APP_BASE_URL
              value: 'http://textin-financial-statement:30080/'
          image: 'registry.intsig.net/textin_global/fr-web:v4.0.202211122230'
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 5
          name: fr-web
          ports:
            - containerPort: 80
              name: fr-web
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /etc/localtime
              name: localtime
      hostAliases:
        - hostnames:
            - textin-financial-statement
          ip: 10.2.10.63
      imagePullSecrets:
        - name: harbor-hawkeye
      volumes:
        - hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
          name: localtime

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: textin-financial-statement
  name: fr-web
  namespace: default
spec:
  ports:
    - name: fr-web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: fr-web
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  labels:
    app.kubernetes.io/instance: textin-financial-statement
  name: fr-web
  namespace: default
spec:
  rules:
    - host: textin-fr-web.ai.intsig.net
      http:
        paths:
          - backend:
              service:
                name: fr-web
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: textin-fr-web
      http:
        paths:
          - backend:
              service:
                name: fr-web
                port:
                  number: 80
            pathType: ImplementationSpecific
